# Oblivious-Private-Database-Search

./: MP-SPDZ_Only_Scheme.py  README.md  compile_and_run.sh  pyproject.toml
Client/: client.py  fileIntegerDecoder.py  searchQueryIntegerEncoder.py
Client/Encoding/: file_decoder.py
Client/Networking/: client.py
Client/Preprocessing/: bitonic_sort.py  key_stream_generator.py
Client/Utilities/: client_utilities.py
DatabaseIndex/: invertedIndexMatrix.py
MP-SPDZ Files/: Circuit_Only_Scheme.mpc  MP-SPDZ_Only_Scheme.mpc
MP-SPDZ Only Scheme/: MP-SPDZ_Only_Scheme.py  run.sh
MP-SPDZ Scripts/: MP-SPDZ_Only_Scheme.mpc
MP-SPDZ_Only_Scheme/: MP-SPDZ_Only_Scheme.py  compile_and_run.sh
MP_SPDZ_Circuits/: if_else128.txt  if_else32.txt  sort_and_encrypt256.txt  sort_and_reencrypt128.txt  sort_and_reencrypt256.txt
MP_SPDZ_Scripts/: AES_128_CTR.mpc  MP_SPDZ_Only_Scheme.mpc  XOR.mpc  aes_128.mpc  aes_128_ecb_with_circuit.mpc  compare_and_encrypt.mpc  compare_and_reencrypt.mpc  semantic_search.mpc  sort_and_encrypt.mpc  sort_and_encrypt_with_circuit.mpc  sort_and_reencrypt.mpc  sort_and_reencrypt_with_circuit.mpc  xor.mpc
MockData/: airport_data.json  generatePNR_Data.py
MockData/PNR Records/: SampleRecord  SampleRecord.json
Oblivious Database Query Scheme/: run.py
Oblivious_Database_Query_Scheme/: app.py  app_client.py  app_server.py  client_app.py  getters.py  run.py  server_app.py  setup.py
Oblivious_Database_Query_Scheme/Client/: client.py
Oblivious_Database_Query_Scheme/Server/: server.py
Proof of Concept Scheme/: MP-SPDZ_Only_Scheme.py
Proof_of_Concept_Scheme/: MP-SPDZ_Only_Scheme.py  app.py  compile_and_run.sh  run.sh
Proof_of_Concept_Scheme/Client/: client.py
Server/: server.py
Server/Data_Generation/: generatePNR_Data.py
Server/DatabaseIndex/: fileIndexing.py  indexing.py  indexingIntegerEncoding.py  invertedIndexMatrix.py  invertedIndexMatrixIntegerEncoder.py  invertedIndexMatrixWithFiles.py
Server/Encoding/: file_encoder.py  index_encoder.py  (+1 more)
(+92 files in other folders)
