[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'

[project]
version = '1.0.0'
requires-python = '>=3.10'
license = {text = 'MIT License'}
name = 'ObliviousPrivateDatabaseSearch'
description = 'Implementation of oblivious private database search showcasing regular searching and semantic search of mock records.'
readme = 'README.md'
dependencies = ['cryptography', 'names', 'random-address', 'sentence-transformers']

[project.scripts]
opds_setup = 'application.setup:main'
opds_client = 'application.app_client:main'
opds_server = 'application.app_server:main'
