[build-system]
requires = ['setuptools>=61.0.0']
build-backend = 'setuptools.build_meta'

[project]
version = '1.0.0'
requires-python = '>=3.10'
license = {text = 'MIT License'}
name = 'PrivateDatabaseSearching'
description = 'Implementation of private database searching showcasing regular searching and semantic search of mock records.'
readme = 'README.md'
dependencies = ['cryptography', 'names', 'random-address', 'sentence-transformers']

[project.scripts]
pds_setup = 'application.setup:main'
pds_client = 'application.app_client:main'
pds_server = 'application.app_server:main'
